<resources>
    <string name="app_name">CoinBeep</string>
    <string name="atualizar">Atualizar</string>
    <string name="valor">Valor</string>
    <string name="ip">IP</string>
    <string name="criptomoeda_lbl">Criptomoeda</string>
    <string name="moeda_lbl">Moeda</string>
    <string name="rate_lbl">Valor: </string>
    <string name="rate_value"> 00.00 </string>
    <string-array name="moedas_name">
        <item>Afegane afegão (؋)</item>
        <item>Lek albanês (L)</item>
        <item>Kwanza angolano (Kz)</item>
        <item>Rial saudita (ر.س)</item>
        <item>Peso argentino ($)</item>
        <item>Dram arménio ()</item>
        <item>Florim arubano (ƒ)</item>
        <item>Manat azerbaijano ()</item>
        <item>Dólar baamense ($)</item>
        <item>Taka bangladexense (৳)</item>
        <item>Dólar dos Barbados ($)</item>
        <item>Dinar barenita (.د.ب)</item>
        <item>Dólar do Belize ($)</item>
        <item>Dólar bermudense ($)</item>
        <item>Rublo bielorrusso (Br)</item>
        <item>Boliviano (Bs.)</item>
        <item>Marco convertível da Bósnia (KM)</item>
        <item>Real (R$)</item>
        <item>Lev búlgaro (лв)</item>
        <item>Franco burundiano (Fr)</item>
        <item>Ngultrum butanês (Nu.)</item>
        <item>Escudo cabo-verdiano ($)</item>
        <item>Dólar das Ilhas Caimão ($)</item>
        <item>Riel cambojano (៛)</item>
        <item>Dólar canadiano ($)</item>
        <item>Rial catarense (ر.ق)</item>
        <item>Tengue cazaque (₸)</item>
        <item>Coroa checa (Kč)</item>
        <item>Peso chileno ($)</item>
        <item>Iuane chinês (¥)</item>
        <item>Peso colombiano ($)</item>
        <item>Franco comorense (Fr)</item>
        <item>Franco congolês (Fr)</item>
        <item>Won norte-coreano (₩)</item>
        <item>Won sul-coreano (₩)</item>
        <item>Kuna croata (kn)</item>
        <item>Dinar cuaitiano (د.ك)</item>
        <item>Peso cubano convertível ($)</item>
        <item>Peso cubano ($)</item>
        <item>Peso dominicano ($)</item>
        <item>Libra egípcia (£ ou ج.م)</item>
        <item>Dirame dos Emirados Árabes Unidos (د.إ)</item>
        <item>Nakfa eritreia (Nfk)</item>
        <item>Birr etíope (Br)</item>
        <item>Coroa dinamarquesa (kr)</item>
        <item>Dólar fijiano ($)</item>
        <item>Peso filipino (₱)</item>
        <item>Dalasi gambiano (D)</item>
        <item>Cedi do Gana (₵)</item>
        <item>Lari georgiano (ლ)</item>
        <item>Libra de Gibraltar (£)</item>
        <item>Quetzal guatemalteco (Q)</item>
        <item>Dólar guianense ($)</item>
        <item>Franco guineense (Fr)</item>
        <item>Franco CFA BEAC (Fr)</item>
        <item>Gurde haitiano (G)</item>
        <item>Lempira hondurenha (L)</item>
        <item>Dólar de Honguecongue ($)</item>
        <item>Florim húngaro (Ft)</item>
        <item>Rial iemenita (﷼)</item>
        <item>Rupia indiana ()</item>
        <item>Rupia indonésia (Rp)</item>
        <item>Rial iraniano (﷼)</item>
        <item>Dinar iraquiano (ع.د)</item>
        <item>Coroa islandesa (kr)</item>
        <item>Dólar jamaicano ($)</item>
        <item>Iene japonês (¥)</item>
        <item>Franco jibutiano (Fr)</item>
        <item>Loti do Lesoto (L)</item>
        <item>Libra libanesa (ل.ل)</item>
        <item>Dólar liberiano ($)</item>
        <item>Dinar líbio (ل.د)</item>
        <item>Pataca macaense (P)</item>
        <item>Dinar macedónio (ден)</item>
        <item>Ariari malgaxe (Ar)</item>
        <item>Ringuite malaio (RM)</item>
        <item>Kwacha malauiano (MK)</item>
        <item>Rupia maldiva (.ރ)</item>
        <item>Libra das Ilhas Malvinas (£)</item>
        <item>Rupia maurícia (₨)</item>
        <item>Peso mexicano ($)</item>
        <item>Kyat de Mianmar (Ks)</item>
        <item>Metical moçambicano (MT)</item>
        <item>Leu moldávio (L)</item>
        <item>Tugrik mongol (₮)</item>
        <item>Dólar namibiano ($)</item>
        <item>Rupia nepalesa (₨)</item>
        <item>Córdoba nicaraguano (C$)</item>
        <item>Naira nigeriano (₦)</item>
        <item>Coroa norueguesa (kr)</item>
        <item>Rial omanense (ر.ع.)</item>
        <item>Novo siclo israelita (₪)</item>
        <item>Dinar jordano (د.ا)</item>
        <item>Balboa panamense (B/.)</item>
        <item>Kina papuásia (K)</item>
        <item>Rupia paquistanesa (₨)</item>
        <item>Guarani paraguaio (₲)</item>
        <item>Novo sol peruano (S/.)</item>
        <item>Dólar da Nova Zelândia ($)</item>
        <item>Zlóti polaco (zł)</item>
        <item>Xelim queniano (Sh)</item>
        <item>Som quirguiz (лв)</item>
        <item>Leu romeno (lei)</item>
        <item>Franco ruandês (Fr)</item>
        <item>Rublo russo (₽)</item>
        <item>Dinar argelino (د.ج)</item>
        <item>Uguia mauritana (UM)</item>
        <item>Dirame marroquino (د. م.)</item>
        <item>Dólar das Ilhas Salomão ($)</item>
        <item>Tala samoana (T)</item>
        <item>Florim antilhano (ƒ)</item>
        <item>Dobra de São Tomé e Príncipe (Db)</item>
        <item>Dólar das Caraíbas Orientais ($)</item>
        <item>Rupia seichelense (₨)</item>
        <item>Leone serra-leonino (Le)</item>
        <item>Dinar sérvio (дин. ou din.)</item>
        <item>Dólar do Brunei ($)</item>
        <item>Dólar de Singapura ($)</item>
        <item>Libra síria (£ ou ل.س)</item>
        <item>Xelim somaliano (Sh)</item>
        <item>Rupia do Sri Lanka (Rs ou රු)</item>
        <item>Lilangeni suazilandês (L)</item>
        <item>Libra sudanesa (£)</item>
        <item>Libra sul-sudanesa (£)</item>
        <item>Coroa sueca (kr)</item>
        <item>Franco suíço (Fr)</item>
        <item>Dólar surinamês ($)</item>
        <item>Baht tailandês (฿)</item>
        <item>Novo dólar de Taiuã ($)</item>
        <item>Somoni tajique (ЅМ)</item>
        <item>Xelim tanzaniano (Sh)</item>
        <item>Franco CFA BCEAO (Fr)</item>
        <item>Paʻanga tonganesa (T$)</item>
        <item>Dólar de Trindade e Tobago ($)</item>
        <item>Libra de Santa Helena (£)</item>
        <item>Dinar tunisino (د.ت)</item>
        <item>Manat turcomeno (m)</item>
        <item>Lira turca ()</item>
        <item>Dólar australiano ($)</item>
        <item>Grívnia ucraniana (₴)</item>
        <item>Xelim ugandês (Sh)</item>
        <item>Peso uruguaio ($)</item>
        <item>Som usbeque (лв)</item>
        <item>Vatu do Vanuatu (Vt)</item>
        <item>Bolívar Soberano Venezuelano (Bs S)</item>
        <item>Dongue vietnamita (₫)</item>
        <item>Franco CFP (Fr)</item>
        <item>Kwacha zambiano (ZK)</item>
        <item>Pula do Botsuana (P)</item>
        <item>Libra esterlina (£)</item>
        <item>Euro (€)</item>
        <item>Rand sul-africano (R)</item>
        <item>Dólar dos Estados Unidos ($)</item>
    </string-array>
    <string-array name="moedas_iso_code_array">
        <item>AFN</item>
        <item>ALL</item>
        <item>AOA</item>
        <item>SAR</item>
        <item>ARS</item>
        <item>AMD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BSD</item>
        <item>BDT</item>
        <item>BBD</item>
        <item>BHD</item>
        <item>BZD</item>
        <item>BMD</item>
        <item>BYR</item>
        <item>BOB</item>
        <item>BAM</item>
        <item>BRL</item>
        <item>BGN</item>
        <item>BIF</item>
        <item>BTN</item>
        <item>CVE</item>
        <item>KYD</item>
        <item>KHR</item>
        <item>CAD</item>
        <item>QAR</item>
        <item>KZT</item>
        <item>CZK</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>KMF</item>
        <item>CDF</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>HRK</item>
        <item>KWD</item>
        <item>CUC</item>
        <item>CUP</item>
        <item>DOP</item>
        <item>EGP</item>
        <item>AED</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>DKK</item>
        <item>FJD</item>
        <item>PHP</item>
        <item>GMD</item>
        <item>GHS</item>
        <item>GEL</item>
        <item>GIP</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>GNF</item>
        <item>XAF</item>
        <item>HTG</item>
        <item>HNL</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>YER</item>
        <item>INR</item>
        <item>IDR</item>
        <item>IRR</item>
        <item>IQD</item>
        <item>ISK</item>
        <item>JMD</item>
        <item>JPY</item>
        <item>DJF</item>
        <item>LSL</item>
        <item>LBP</item>
        <item>LRD</item>
        <item>LYD</item>
        <item>MOP</item>
        <item>MKD</item>
        <item>MGA</item>
        <item>MYR</item>
        <item>MWK</item>
        <item>MVR</item>
        <item>FKP</item>
        <item>MUR</item>
        <item>MXN</item>
        <item>MMK</item>
        <item>MZN</item>
        <item>MDL</item>
        <item>MNT</item>
        <item>NAD</item>
        <item>NPR</item>
        <item>NIO</item>
        <item>NGN</item>
        <item>NOK</item>
        <item>OMR</item>
        <item>ILS</item>
        <item>JOD</item>
        <item>PAB</item>
        <item>PGK</item>
        <item>PKR</item>
        <item>PYG</item>
        <item>PEN</item>
        <item>NZD</item>
        <item>PLN</item>
        <item>KES</item>
        <item>KGS</item>
        <item>RON</item>
        <item>RWF</item>
        <item>RUB</item>
        <item>DZD</item>
        <item>MRO</item>
        <item>MAD</item>
        <item>SBD</item>
        <item>WST</item>
        <item>ANG</item>
        <item>STD</item>
        <item>XCD</item>
        <item>SCR</item>
        <item>SLL</item>
        <item>RSD</item>
        <item>BND</item>
        <item>SGD</item>
        <item>SYP</item>
        <item>SOS</item>
        <item>LKR</item>
        <item>SZL</item>
        <item>SDG</item>
        <item>SSP</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>SRD</item>
        <item>THB</item>
        <item>TWD</item>
        <item>TJS</item>
        <item>TZS</item>
        <item>XOF</item>
        <item>TOP</item>
        <item>TTD</item>
        <item>SHP</item>
        <item>TND</item>
        <item>TMT</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VUV</item>
        <item>VES</item>
        <item>VND</item>
        <item>XPF</item>
        <item>ZMK</item>
        <item>BWP</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>ZAR</item>
        <item>USD</item>
    </string-array>
    <string-array name="criptomoedas_name_array">
        <item>Bitcoin</item>
        <item>Litecoin</item>
        <item>Namecoin</item>
        <item>Peercoin</item>
        <item>Dogecoin</item>
        <item>Gridcoin</item>
        <item>Primecoin</item>
        <item>Ripple</item>
        <item>Nxt</item>
        <item>Emercoin</item>
        <item>Mastercoin</item>
        <item>Auroracoin</item>
        <item>Dash</item>
        <item>NEO</item>
        <item>MazaCoin</item>
        <item>Monero</item>
        <item>NEM</item>
        <item>PotCoin</item>
        <item>Nano</item>
        <item>CloakCoin</item>
        <item>Aeon</item>
        <item>BlackCoin</item>
        <item>DigitalNote</item>
        <item>Titcoin</item>
        <item>Verge</item>
        <item>Stellar</item>
        <item>Vertcoin</item>
        <item>Ethereum</item>
        <item>Ethereum Classic</item>
        <item>E-Coins</item>
        <item>Tether</item>
        <item>Zcash</item>
        <item>Bitcoin Cash</item>
        <item>EOS.IO</item>
        <item>Niobio Cash</item>
        <item>Niobium Coin</item>
        <item>Lunes</item>
    </string-array>
</resources>