<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCriptomoeda"
        android:layout_width="101dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/criptomoeda_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Spinner
        android:id="@+id/spCriptomoeda"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:entries="@array/criptomoedas_name_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCriptomoeda"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvMoeda"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/moeda_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCriptomoeda" />

    <Spinner
        android:id="@+id/spMoeda"
        android:layout_width="241dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:entries="@array/moedas_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvMoeda"
        app:layout_constraintTop_toBottomOf="@+id/spCriptomoeda" />

    <Button
        android:id="@+id/btAtualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:onClick="btAtualizarOnClickView"
        android:text="@string/atualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMoeda" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/rate_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAtualizar" />

    <TextView
        android:id="@+id/rate_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/rate_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvRate"
        app:layout_constraintTop_toBottomOf="@+id/btAtualizar" />

</androidx.constraintlayout.widget.ConstraintLayout>